--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container" id="app">
-      <h1>WDISG2 <span id="status" class="label label-default">loading</span></h1>
+      <!-- <h1>WDISG2 <span id="status" class="label label-default">loading</span></h1>
 
       <section id="join" class="well hidden">
         <form id="JoinForm" class="form-inline text-right">
@@ -40,7 +40,7 @@
 
           </div>
         </section>
-      </main>
+      </main> -->
     </div>
   </body>
   <script src="js/bundle.js"></script>
